# raspi_tgbot

./: .editorconfig  .gitignore  README.md  install-systemd.sh  install.sh  pyproject.toml  requirements.txt
.github/workflows/: python-release.yml
nick_raspi_01_bot/: commands.py  main.py
raspi_tgbot/: __init__.py  bot.py  commands.py  config.py  main.py
raspi_tgbot/util/: allower.py
