[tool.poetry]
name = "raspi_tgbot"
version = "1.1.0"
description = "Utilitary Telegram Bot for Raspberry Pi"
license = "BSD-3-Clause"
readme = "README.md"
authors = ["Nikita Karamov <nick@karamoff.dev>"]
repository = "https://github.com/NickKaramoff/raspi_tgbot.git"

[tool.poetry.dependencies]
python = "^3.6"
python-telegram-bot = "^13.0"
python-dotenv = "^0.15.0"
ujson = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
raspi-bot = 'raspi_tgbot.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
